[tool.poetry]
name = "kriging_gpr"
version = "0.1.1"
description = "Gaussian Process Regression Package from Matlab to Python"
authors = ["Tanmay Khandait <tkhandai@asu.edu>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
